--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://mohammadjoshaghani.github.io//"
+baseURL: "https://mohammadjoshaghani.github.io/"
 title: Mohammad Joshaghani
 paginate: 10
 theme: PaperMod
