--- a/config.yml
+++ b/config.yml
@@ -19,7 +19,7 @@ params:
   title: Mohammad Joshaghani Personal Website
   description: "Here, I will share my thoughts"
   keywords: [Blog, Portfolio, AmirPourmand, AI]
-  author: Amir
+  author: Mohammad
   # author: ["Me", "You"] # multiple authors
   images: ["opengraph/opengraph.png"]
   DateFormat: "January 2, 2006"
