--- a/config.yml
+++ b/config.yml
@@ -23,7 +23,7 @@ params:
   # author: ["Me", "You"] # multiple authors
   images: ["opengraph/opengraph.png"]
   DateFormat: "January 2, 2006"
-  defaultTheme: auto # dark, light
+  defaultTheme: light # dark, auto
   disableThemeToggle: false
 
   ShowReadingTime: true
